# feynman

./: .gitignore  Cargo.toml  Makefile  README.md
src/: db.rs  main.rs  models.rs
src/tui/: mod.rs  ui.rs
src/tui/widgets/: dashboard.rs  mod.rs  plan_detail.rs  plans.rs  topic_detail.rs  topics.rs
